--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "github.com/infobloxopen/infoblox-go-client"
-  branch = "master"
+  version = "0.6.0"
 
 [prune]
   go-tests = true
