--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "github.com/infobloxopen/infoblox-go-client"
-  version = "1.0"
+  branch = "master"
 
 [prune]
   go-tests = true
