--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 [[constraint]]
   name = "github.com/hashicorp/terraform"
-  version = "0.11.3"
+  version = ">=0.11.3"
 
 [[constraint]]
   name = "github.com/infobloxopen/infoblox-go-client"
