--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 # go.googlesource.com so rate limits are higher when using `go get` to fetch
 # packages that live there.
 # See: https://github.com/golang/go/issues/12933
-- bash scripts/gogetcookie.sh
+- bash scripts/gofmtcheck.sh
 - make tools
 
 script:
