--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -21,3 +21,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEFAULT_BUMP: patch
         WITH_V: true
+        RELEASE_BRANCHES: test-release
