--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -19,6 +19,6 @@ jobs:
 
     - uses: anothrNick/github-tag-action@1.35.0
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN_PAT }}
         DEFAULT_BUMP: patch
         WITH_V: true
