--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,6 +48,6 @@ signs:
       - "${artifact}"
 release:
   # If you want to manually examine the release before its live, uncomment this line:
-  draft: true
+  # draft: true
 changelog:
   skip: true
