--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -20,5 +20,5 @@ jobs:
     - uses: anothrNick/github-tag-action@1.35.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: patch
+        DEFAULT_BUMP: none
         WITH_V: true
